--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,39 +2,16 @@
 dependency:
   name: galaxy
 driver:
-  name: docker
-lint:
-  name: yamllint
+  name: podman
+lint: 'yamllint'
 platforms:
-  - name: debian
-    image: debian:stretch
-    privileged: True
-    command: /sbin/init
-    volume_mounts:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    environment:
-      container: docker
-  - name: xenial
-    image: ubuntu:xenial
-    privileged: True
-    command: /sbin/init
-    volume_mounts:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    environment:
-      container: docker
+  - name: debian10
+    image: "geerlingguy/docker-debian10-ansible:latest"
+    pre_build_image: true
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
-scenario:
-  name: default
-  test_sequence:
-    - lint
-    - destroy
-    - create
-    - converge
-    - verify
-    - destroy
 verifier:
   name: testinfra
   lint:
