--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,61 +1,39 @@
 ---
+# tasks file for unifi_controller
+- name: include os dependent variables
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    - "{{ ansible_distribution }}.yml"
+    - "{{ ansible_os_family }}.yml"
+
 - name: install dependencies
   apt:
     name: "{{ unifi_package_dependencies }}"
     state: present
-  become: yes
+    update_cache: yes
 
-- name: install ubnt apt key
-  apt_key:
-    keyserver: "{{ unifi_repo_key_server }}"
-    id: "{{ unifi_repo_key_id }}"
-  become: yes
-
-- name: install ubnt apt repository
-  apt_repository:
-    filename: "{{ unifi_repo_name }}"
-    repo: "{{ unifi_repo_url }}"
-    state: "{{ unifi_repo_state }}"
-  become: yes
-  when: ansible_os_family == "Debian"
+- name: install mongodb
+  include_tasks: install-mongodb.yml
 
 - name: install java packages
   apt:
-    allow_unauthenticated: yes
     name: "{{ unifi_java_packages }}"
-    state: "{{ unifi_packages_state }}"
+    state: "{{ unifi_install_state }}"
     update_cache: yes
-  become: yes
   notify:
     - restart unifi
 
-- name: install unifi-controller packages
-  apt:
-    allow_unauthenticated: yes
-    name: "{{ unifi_packages }}"
-    state: "{{ unifi_packages_state }}"
-    update_cache: yes
-  become: yes
-  notify:
-    - restart unifi
+- name: install unifi
+  include_tasks: install-unifi.yml
 
 - name: update snappy java
   get_url:
     url: "{{ unifi_java_snappy_url }}"
     checksum: "{{ unifi_java_snappy_checksum }}"
     dest: "{{ unifi_java_snappy_file }}"
-  become: yes
   notify:
     - restart unifi
-
-- name: disable mongodb default instance
-  lineinfile:
-    path: '{{ unifi_mongodb_config }}'
-    regexp: '^ENABLE_MONGODB='
-    line: 'ENABLE_MONGODB=no'
-  become: yes
-  notify:
-    - restart mongodb
 
 - name: configure java for unifi
   lineinfile:
@@ -63,7 +41,6 @@
     path: '{{ unifi_config_file }}'
     regexp: '^JAVA_HOME='
     line: 'JAVA_HOME={{ unifi_java_home }}'
-  become: yes
   notify:
     - restart unifi
 
@@ -72,5 +49,4 @@
     name: "{{ item }}"
     state: "{{ unifi_services_state }}"
     enabled: "{{ unifi_services_enabled }}"
-  become: yes
   with_items: "{{ unifi_services }}"
